# UG

./: README.md
3rd Semester/DS/: README.md
3rd Semester/OS/: README.md  a.out
3rd Semester/OS/Assignment3/: fileDetails.cpp
Sem3/CN/Lab/: Hamming.cpp  Ip_Address.cpp  Q1_CRC.cpp  Q2_stopandwait.cpp  Q3_Gobackn.cpp  Q4_Selective.cpp  Q5_distance.cpp  Q6_djikstra.cpp  README.md
Sem3/CN/Practical/: CRC12.cpp  CRC2.cpp  IPAddressing.cpp  a.out
Sem3/DS/: README.md  a.out
Sem3/DS/BinaryTree/: Node.h  Test.cpp  Tree.h  a.out  main.cpp  test2.cpp
Sem3/DS/Final/: BST.cpp  Q1.cpp  Q4.cpp  a.out  list.h  passenger.cpp  stackArray.cpp
Sem3/DS/LinkedList/: CLL.cpp  DLL.cpp  SLL.cpp  a.out  circularll.cpp  doublyll.cpp  lab2Q3.cpp  singlyll.cpp
Sem3/DS/Queue/: QueueArray.cpp  QueueDLL.cpp  QueueLL.cpp  a.out
Sem3/DS/Sorting/: a.out  bubbleSort.cpp  insertionSort.cpp  selectionSort.cpp
Sem3/DS/Stack/: a.out  stackArray.cpp  stackLL.cpp
Sem3/OS/: Q5copy.cpp  README.md  a.out
Sem3/OS/Assignment2/: a.out
Sem3/OS/Assignment3/: a.out
Sem3/OS/Assignment4Fork/: a.out  fork1.cpp  fork2.cpp  fork3.cpp  fork4.cpp  fork5.cpp
Sem3/Python/: README.md  productOfTable.py  sumTillNull.py  three.py  two.py
Sem4/Algo/AC-1232 Algo Practicals/: BreadthFirstSearch.cpp  BucketSort.cpp  CMakeLists.txt  CountingSort.cpp  DepthFirstSearch.cpp  HeapSort.cpp  InsertionSort.cpp  Knapsack.cpp  KruskalsMST.cpp  MergeSort.cpp  QuickSort.cpp  RadixSort.cpp  RandomizedSelect.cpp  WeighteIntervalSchedulingALgo.cpp  primsSpanningTree.cpp
Sem4/SE/: SE project Template.docx
(+168 files in other folders)
